refactor: index값을 Position 객체로 포장